--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,12 @@
                 <li class="nav-item">
                         <a class="nav-link" routerLink="reporte">Reportes</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="materia">Adicionar Materia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="estudiante">Adicionar estudiante</a>
+                    </li>
             </ul>
         </form>
     </div>
