--- a/src/app/components/estudiante/estudiante.component.html
+++ b/src/app/components/estudiante/estudiante.component.html
@@ -1,3 +1,118 @@
-<p>
-  estudiante works!
-</p>
+<div class="row">
+
+  <div class="col-sm-3" id="menu">
+
+    <img src="/../assets/img/foto.png"  height="200"  style="background: gainsboro; border: none; padding-left: 20%;padding-top: 5%;">
+    <br/><br/>
+    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+      <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home"
+        aria-selected="true">Seguimiento de Tutoría</a>
+      <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
+        aria-selected="false">Observaciones de Tutoría</a>
+      <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
+        aria-selected="false">Reportes de Desempeño</a>
+      <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
+        aria-selected="false">Reportes de Asistencia</a>
+    </div>
+  </div>
+
+  <div class="col-sm-9" id="cuerpo">
+    <div class="col-sm-9" style="padding: 0%; margin: 0%;">
+      <img src="/../assets/img/banner.jpg" height="165" width="1019" />
+    </div>
+    <br/>
+    <form id="formulario" >
+      <div class="col-sm-12">
+        <div class="row">
+        <div class="col-sm-6">
+          <input type="text" class="form-control" placeholder="Nombre del estudiante" >
+        </div>
+        <div class="col-sm-6">
+          <input type="text" class="form-control" placeholder="Código del estudiante"  >
+        </div>
+        <div class="col-sm-6">
+          <br/>
+          <input type="text" class="form-control" placeholder="Correo electrónico del estudiante" >
+        </div>
+        <div class="col-sm-6">
+          <br/>
+          <div class="form-group">
+            <select class="form-control" >
+              <option>Semestre</option>
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+              <option>6</option>
+              <option>7</option>
+              <option>8</option>
+              <option>9</option>
+              <option>10</option>
+            </select>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="form-group">
+              <select class="form-control">
+                <option>Programa Académico</option>
+                <option>Administración de Empresas</option>
+                <option>Contaduría Publica y Finanzas Internacionales</option>
+                <option>Economía</option>
+                <option>Economía y Negocios Internacionales</option>
+                <option>Mercadeo Internacinal y Publicidad</option>
+                <option>Diseño Industrial</option>
+                <option>Diseño de Medios Interactivos</option>
+                <option>Ingeniería de Sistemas</option>
+                <option>Ingeniería Industrial</option>
+                <option>Ingeniería Telemática</option>
+                <option>Ingeniería Bioquímica</option>
+                <option>Ciencia Política con énfasis en Relaciones Internacionales</option>
+                <option>Derecho</option>
+                <option>Psicología</option>
+                <option>Música</option>
+                <option>Sociología</option>
+                <option>Biología</option>
+                <option>Química</option>
+                <option>Medicina</option>
+                <option>Licenciatura en Educación Basica Primaria</option>
+                <option>Licenciatura en Literatura y Lengua Castellana</option>
+                <option>Licenciatura en Artes con énfasis en tecnologías para la creación</option>
+                <option>Licenciatura en Lenguas Extrangeras con énfasis en inglés</option>
+                <option>Licenciatura en Ciencias Naturales</option>
+                <option>Licenciatura en Ciencias Sociales</option>
+              </select>
+            </div>
+      </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <button type="submit" class="btn btn-outline-success boton">Crear estudiante</button>
+          </div>
+          <div class="col-sm-6">
+            <button type="submit" class="btn btn-outline-danger boton">Cancelar</button>
+          </div>
+    </div>
+    <br/>
+  </div>
+    </form>
+</div>
+</div>
+
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-s6">
+        <br/>
+        <img src="/assets/img/logo-icesi.png" />
+        <p>Centro LEO</p>
+        <p>
+          <i class="fas fa-phone"></i>+57 (2) 555 2334 +57 (2) 555 1441
+        </p>
+        <p>Universidad Icesi, Calle 18 No. 122-135 Pance, Cali - Colombia</p>
+        <p>Biblioteca Universidad Icesi - Cali</p>
+        <p>Todos los derechos reservados. Imágenes propiedad de la Universidad Icesi</p>
+      </div>
+    </div>
+  </div>
+</footer>
