--- a/src/app/components/materia/materia.component.html
+++ b/src/app/components/materia/materia.component.html
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <button type="submit" class="btn btn-outline-success boton">Crear estudiante</button>
+          <button type="submit" class="btn btn-outline-success boton">Crear materia</button>
         </div>
         <div class="col-sm-6">
           <button type="submit" class="btn btn-outline-danger boton">Cancelar</button>
