--- a/src/app/components/seguimientotutoria/seguimientotutoria.component.html
+++ b/src/app/components/seguimientotutoria/seguimientotutoria.component.html
@@ -27,11 +27,11 @@
         <div class="row">
           <div class="col-sm-6">  
             <div class="form-group">
-                 <select class="form-control" name="numEstudiantes" [(ngModel)]="asistencia.numEstudiantes">
+                 <select class="form-control" aria-placeholder="Número de estudiantes en la tutoría" name="numEstudiantes" [(ngModel)]="asistencia.numEstudiantes">
                       <option>Número de estudiantes en la tutoría</option>
                       <option>1</option>
                       <option>2</option>
-                      <option>3</option>
+                      <option>3</option>  
                       <option>4</option>
                       <option>5</option>
                  </select>
