--- a/src/app/components/reporte/reporte.component.html
+++ b/src/app/components/reporte/reporte.component.html
@@ -19,7 +19,7 @@
 
   <div class="col-sm-9" id="cuerpo">
     <div class="col-sm-9" style="padding: 0%; margin: 0%;">
-      <img src="/../assets/img/banner.jpg" height="165" width="1019" />
+      <img src="/../assets/img/library-banner.jpg" height="165" width="1019" />
     </div>
     <div class="row">
       <div class="col-sm-12">
