--- a/src/app/components/estudiante/estudiante.component.html
+++ b/src/app/components/estudiante/estudiante.component.html
@@ -18,7 +18,7 @@
 
   <div class="col-sm-9" id="cuerpo">
     <div class="col-sm-9" style="padding: 0%; margin: 0%;">
-      <img src="/../assets/img/banner.jpg" height="165" width="1019" />
+      <img src="/../assets/img/library-banner.jpg" height="165" width="1019" />
     </div>
     <br/>
     <form id="formulario" (ngSubmit)="addEstudiante()"> 
