--- a/src/app/components/materia/materia.component.html
+++ b/src/app/components/materia/materia.component.html
@@ -18,7 +18,7 @@
 
   <div class="col-sm-9" id="cuerpo">
     <div class="col-sm-9" style="padding: 0%; margin: 0%;">
-      <img src="/../assets/img/banner.jpg" height="165" width="1019" />
+      <img src="/../assets/img/library-banner.jpg" height="165" width="1019" />
     </div>
     <br/>
     <form id="formulario" (ngSubmit)="addMateria()">
@@ -39,10 +39,7 @@
         <div class="col-sm-6">
           <button type="submit" class="btn btn-outline-success boton">Crear materia</button>
         </div>
-        <div class="col-sm-6">
-          <button type="submit" class="btn btn-outline-danger boton">Cancelar</button>
-        </div>
-    </div>
+     </div>
     <br/>
   </div>
     </form>
