--- a/src/app/components/observacionestutoria/observacionestutoria.component.html
+++ b/src/app/components/observacionestutoria/observacionestutoria.component.html
@@ -18,7 +18,7 @@
       
         <div class="col-sm-9" id="cuerpo">
           <div class="col-sm-9" style="padding: 0%; margin: 0%;">
-            <img src="/../assets/img/banner.jpg" height="165" width="1019" />
+            <img src="/../assets/img/library-banner.jpg" height="165" width="1019" />
           </div>
           <br/>
           <div class="col-sm-12">
@@ -27,6 +27,9 @@
             <div class="form-group">
               <select class="form-control">
                 <option>Tipo de Tutoría</option>
+                <option>Lectura</option>
+                <option>Escritura</option>
+                <option>Oralidad</option>
               </select>
             </div>
           </div>
@@ -98,11 +101,8 @@
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Comentarios"></textarea>
           </div>
           <div class="col-sm-6">
-              <button type="submit" class="btn btn-outline-success boton">Enviar</button>
-              <br/><br/>
-              <button type="submit" class="btn btn-outline-danger boton">Cancelar</button>
-            </div>
-        
+              <button type="submit" class="btn btn-outline-success boton">Guardar</button>
+            </div>        
         </div>
         <br/>
       </div>
