--- a/src/app/components/seguimientotutoria/seguimientotutoria.component.html
+++ b/src/app/components/seguimientotutoria/seguimientotutoria.component.html
@@ -19,31 +19,32 @@
 
   <div class="col-sm-9" id="cuerpo">
     <div class="col-sm-9" style="padding: 0%; margin: 0%;">
-      <img src="/../assets/img/banner.jpg" height="165" width="1019" />
+      <img src="/../assets/img/library-banner.jpg" height="165" width="1019" />
     </div>
     <br/>
     <form id="formulario" (ngSubmit)="addAsistencia()">
       <div class="col-sm-12">
         <div class="row">
-          <div class="col-sm-6">  
+          <div class="col-sm-6">
             <div class="form-group">
-                 <select class="form-control" aria-placeholder="Número de estudiantes en la tutoría" name="numEstudiantes" [(ngModel)]="asistencia.numEstudiantes">
-                      <option>Número de estudiantes en la tutoría</option>
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>  
-                      <option>4</option>
-                      <option>5</option>
-                 </select>
+              <label for="est">Número de estudiantes en la tutoría:</label>
+              <select id="est" class="form-control" name="numEstudiantes" [(ngModel)]="asistencia.numEstudiantes">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+              </select>
             </div>
           </div>
           <div class="col-sm-6">
-              <input type="text" class="form-control" placeholder="Código de Estudiante" name="codigoEstudiante" [(ngModel)]="codigoEstudiante">
-            </div>
-          <div class="col-sm-6">        
+            <label id="cod">Código del estudiante:</label>
+            <input id="cod" type="text" class="form-control" name="codigoEstudiante" [(ngModel)]="codigoEstudiante">
+          </div>
+          <div class="col-sm-6">
             <div class="form-group">
-              <select class="form-control" name="programaAcademico" [(ngModel)]="asistencia.programaAcademico">
-                <option>Programa Académico</option>
+              <label for="pro">Programa académico:</label>
+              <select id="pro" class="form-control" name="programaAcademico" [(ngModel)]="asistencia.programaAcademico">
                 <option>Administración de Empresas</option>
                 <option>Contaduría Publica y Finanzas Internacionales</option>
                 <option>Economía</option>
@@ -72,10 +73,11 @@
               </select>
             </div>
           </div>
-          
-          <div class="col-sm-6">            
+
+          <div class="col-sm-6">
             <div class="form-group">
-              <select class="form-control" name="nombre" [(ngModel)]="materia.nombre">
+              <label for="mat">Materia:</label>
+              <select id="mat" class="form-control" name="nombre" [(ngModel)]="materia.nombre">
                 <option>Materia</option>
               </select>
             </div>
@@ -83,8 +85,8 @@
 
           <div class="col-sm-6">
             <div class="form-group">
-              <select class="form-control" name="tipoTutoria" [(ngModel)]="asistencia.tipoTutoria">
-                <option>Tipo de Tutoría</option>
+              <label for="tt">Tipo de Tutoría:</label>
+              <select id="tt" class="form-control" name="tipoTutoria" [(ngModel)]="asistencia.tipoTutoria">
                 <option>Lectura</option>
                 <option>Escritura</option>
                 <option>Oralidad</option>
@@ -93,12 +95,14 @@
           </div>
 
           <div class="col-sm-6">
-            <input type="text" class="form-control" placeholder="Tipo de Texto" name="tipoTexto" [(ngModel)]="asistencia.tipoTexto">
+            <label for="ttx">Tipo de Texto:</label>
+            <input type="text" class="form-control" placeholder="Reseña, ensayo, informe, resumen, artículo científico, cuento, etc."
+              name="tipoTexto" [(ngModel)]="asistencia.tipoTexto">
           </div>
           <div class="col-sm-6">
-            <div class="form-group">
+            <label for="gd">Genero discursivo:</label>
+            <div id="gd" class="form-group">
               <select class="form-control" name="generoDiscursivo" [(ngModel)]="asistencia.generoDiscursivo">
-                <option>Genero Discursivo</option>
                 <option>Argumentativo</option>
                 <option>Expositivo-Informativo</option>
                 <option>Descriptivo</option>
@@ -107,16 +111,10 @@
             </div>
           </div>
         </div>
-        <a class="nav-link active" href="" id="evaluacion">Realizar evaluación de desempeño del estudiante</a>
-        <div class="row">
-          <div class="col-sm-6">
-            <button type="submit" class="btn btn-outline-success boton">Registrar Tutoría</button>
-          </div>
-          <div class="col-sm-6">
-            <button type="submit" class="btn btn-outline-danger boton">Cancelar</button>
-          </div>
-        </div>
-        <br/>
+      </div>
+      <div id="boton">
+        <button type="submit" class="btn btn-outline-success boton">Registrar Tutoría</button>
+        <br/><br/>
       </div>
     </form>
   </div>
