--- a/src/app/components/seguimientotutoria/seguimientotutoria.component.html
+++ b/src/app/components/seguimientotutoria/seguimientotutoria.component.html
@@ -75,8 +75,8 @@
           
           <div class="col-sm-6">            
             <div class="form-group">
-              <select class="form-control" name="nombre" [(ngModel)]="materia.nombre">
-                <option>Materia</option>
+              <select class="form-control" name="nombre" [(ngModel)]="materia" >
+                <option *ngFor="let valor of materias" [value]="valor.id">{{valor.nombre}}</option>
               </select>
             </div>
           </div>
@@ -93,6 +93,7 @@
           </div>
 
           <div class="col-sm-6">
+            
             <input type="text" class="form-control" placeholder="Tipo de Texto" name="tipoTexto" [(ngModel)]="asistencia.tipoTexto">
           </div>
           <div class="col-sm-6">
