--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -1,9 +1,9 @@
 <div id="contenedor">
   <div class="registro">
     <form id="formulario" (ngSubmit)="addUser()">
-      <h2>Registro</h2>
+      <h2>Registro de Tutores</h2>
       <h4>Centro LEO</h4>
-
+      <br>
       <div class="row">
         <div class="col-sm-6">
           <div class="form-group">
