--- a/src/app/components/grafico-dona/grafico-dona.component.html
+++ b/src/app/components/grafico-dona/grafico-dona.component.html
@@ -3,6 +3,7 @@
                 [data]="doughnutChartData"
                 [labels]="doughnutChartLabels"
                 [chartType]="doughnutChartType"
+                [colors]="lineChartColors"
                 (chartHover)="chartHovered($event)"
                 (chartClick)="chartClicked($event)"></canvas>
   </div>
