--- a/src/app/components/materia/materia.component.html
+++ b/src/app/components/materia/materia.component.html
@@ -33,6 +33,7 @@
               <option>Tipo de curso</option>
               <option>Curso E</option>
               <option>Curso O</option>
+              <option>Curso E y Curso O</option>
             </select>
           </div>
         </div>
