--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link" routerLink="estudiante">Adicionar estudiante</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link"  (click)="logout()" style="cursor:pointer;" >Cerrar Sesión</a>
+                    </li>
             </ul>
         </form>
     </div>
